# cursofastapi

./: .coverage  .dockerignore  .gitignore  .project  Dockerfile  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fastzero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastzero/core/: database.py  security.py  settings.py
fastzero/models/: models.py
fastzero/routes/: auth.py  todos.py  users.py
fastzero/schemas/: auth_schemas.py  todo_schemas.py  users_schemas.py
migrations/: env.py
migrations/versions/: 3cb5096b1afd_create_users_table.py  865b0d42d300_update_users_table.py  a6d97431f82d_create_users_table.py  b99dd93f4136_upgrade_todos_created_and_upgraded.py  eb3e2a8fe0db_create_todo_and_upgrade_table_user.py
tests/: conftest.py  factories.py  test.db.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
